# autonmous-robots-final-project-mirror

./: .gitignore  .gitlab-ci.yml  README.md  gitlab-ci.yml
ansible/: .ansible-ci.yml  .infra-ci.yml  ansible.txt
cloud/: .cloud-ci.yml
cloud-service-template/: .cloud-service-ci.yml
docs/: .docs-ci.yml  hello.txt  test.txt
infra/: .gitignore  .infra-ci.yml  README.md  cloud.yml  robot-experimental.yml  robot-stable.yml  robot.yml
perception/: .perception-ci.yml
platform/: .platform-ci.yml
robot-cone-perception-service/: .robot-cone-perception-ci.yml  CMakeLists.txt  Dockerfile
robot-cone-steering-service/: .robot-cone-steering-ci.yml  CMakeLists.txt  Dockerfile
robot-other-kiwi-perception-service/: .robot-other-kiwi-perception-ci.yml  CMakeLists.txt  Dockerfile  docker-compose.yml
robot-other-kiwi-steering-service/: .robot-other-kiwi-steering-ci.yml  CMakeLists.txt  Dockerfile
robot-paper-perception-service/: .robot-paper-perception-ci.yml  CMakeLists.txt  Dockerfile  README.md
robot-paper-steering-service/: .robot-paper-steering-ci.yml  CMakeLists.txt  Dockerfile  README.md
robot-papper-perception-service/: CMakeLists.txt  Dockerfile
robot-papper-steering-service/: .robot-papper-steering-ci.yml  CMakeLists.txt  Dockerfile
robot-perception-service/: .perception-ci.yml  .robot-perception-ci.yml  Dockerfile  README.md  docker-compose.yml
robot-service-template/: .robot-service-ci.yml  CMakeLists.txt  Dockerfile  README.md
robot-service-template/src/: cluon-complete.hpp  helloworld.cpp  prime-checker.cpp
robot-steering-service/: Dockerfile  (+2 more)
(+61 files in other folders)
